# manchego

./: .gitattributes  .gitignore  README.md  pyproject.toml
.cursor/commands/: check.md  commit.md
.cursor/rules/: 001-meta-rules.mdc  100-docstring-standards.mdc  110-config-file-patterns.mdc  111-init-file-patterns.mdc  200-conda-forge-only.mdc  500-database-patterns.mdc  501-migration-naming.mdc  502-schema-conventions.mdc  503-db-browser-workflow.mdc  503-seed-data-patterns.mdc  600-logging-configuration.mdc  601-log-level-guidelines.mdc  602-module-logging-patterns.mdc  603-cli-audit-trail.mdc  604-transaction-integrity.mdc  605-business-return-structures.mdc  606-performance-logging.mdc  607-secret-sanitization.mdc  609-console-vs-file-logging.mdc  610-operation-id-tracing.mdc  611-log-entry-schema.mdc  612-cli-command-pattern.mdc  620-cli-output-standards.mdc  621-error-handling-patterns.mdc  622-module-responsibilities.mdc  700-testing-standards.mdc  701-cli-testing.mdc  702-test-isolation.mdc  703-test-fixture-usage.mdc  704-cli-mocking-consistency.mdc  705-test-data-isolation.mdc  706-autouse-directory-isolation.mdc  707-testing-module-logging.mdc  708-test-migration-patterns.mdc  709-test-parametrization.mdc  711-test-organization.mdc  712-assertion-patterns.mdc  800-file-discovery-pattern.mdc
docs/rebuild/: ARCHITECTURE-OVERVIEW.md  CLI-IMPLEMENTATION.md  ENVIRONMENT-SETUP.md  REBUILD-PLAN.md  RULES-EVALUATION.md
manchego/: __init__.py  global_config.py
manchego/cli/: __init__.py  base.py  main.py
manchego/database/: __init__.py  connection.py  crud.py  init.py  migrations.py  queries.py
manchego/ledger/: __init__.py  receipts.py
manchego/transactions/: __init__.py  cli.py  config.py  discovery.py  identification.py  loader.py  parsing.py
manchego/utils/: __init__.py  cli_audit.py  logging_helpers.py
sql/: schema.sql  seed_data.sql
tests/: conftest.py  test_global_config.py
tests/cli/: __init__.py  test_main.py
tests/database/: conftest.py  test_connection.py  test_crud.py  test_init.py  test_migrations.py  test_queries.py
tests/transactions/: __init__.py  conftest.py  test_discovery.py  test_identification.py  test_import.py  test_parsing.py
